--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,17 +4,17 @@ FROM node:18
 # Defina o diretório de trabalho dentro do contêiner
 WORKDIR /usr/src/app
 
-# Copie o arquivo package.json e package-lock.json (se existir)
+# Copie os arquivos de dependências primeiro
 COPY package*.json ./
 
-# Instale as dependências
+# Instale as dependências do projeto
 RUN npm install
 
 # Copie o restante do código da aplicação
 COPY . .
 
-# Exponha a porta que o backend escutará
-EXPOSE 3001
+# Exponha a porta usada pela aplicação
+EXPOSE 3005
 
 # Comando para iniciar o servidor
 CMD ["node", "index.js"]
